# dotfiles_templates

ansible/: README.md  gitignore  main.yaml
cmake/: .mk  gitignore
cmakecomplib/: .mk  gitignore
cmakelib/: CMakeLists.txt  gitignore
cmakelib/docs/: CMakeLists.txt
cmakelib/src/: CMakeLists.txt
node/: .mk  gitignore
poetry/: .mk
py/: Makefile
pymodule/: LICENSE  README.md  gitignore  setup.cfg
pymodule/src/example_pkg/: __init__.py
pymodule/src/packaging_twh2898.egg-info/: PKG-INFO  SOURCES.txt
pypackage/: README.md  gitignore  setup.py  setup.yml  some_lib.py
ros/: .mk  driver.cpp  gitignore  roslaunch.launch  vs_launch.json
rospy/: .mk  CMakeLists.txt  driver.py  gitignore
torcpy/: README.md  main.py  post-clone.sh
torcscript/: README.md  gitignore  post-clone.sh
