[metadata]
name = my_project-automas-dev
version = 0.0.1
author = Thomas Harrison
author_email = theharrisoncrafter@gmail.com
description = An awesome project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/automas-dev/packaging
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
